--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,9 @@ Source: ecere-sdk
 Section: devel
 Priority: optional
 Maintainer: Jerome St-Louis <jerstlouis@gmail.com>
-Build-Depends: debhelper (>= 7.0.50~),
+Build-Depends: debhelper (>= 9~),
                dpkg-dev (>= 1.16.1~),
+               dh-exec (>= 0.3~),
                libffi-dev,
                libfontconfig1-dev,
                libfreetype6-dev,
@@ -56,6 +57,7 @@ Description: Ecere SDK Development Tools
 Package: libecere0
 Section: libs
 Architecture: armel armhf i386 powerpc
+Pre-Depends: multiarch-support
 Depends: ${devel:Depends}, ${misc:Depends}, ${shlibs:Depends}
 Description: Ecere Runtime Library
  This package provides the Linux version
@@ -68,6 +70,7 @@ Description: Ecere Runtime Library
 Package: libecerecom0
 Section: libs
 Architecture: armel armhf i386 powerpc
+Pre-Depends: multiarch-support
 Depends: ${devel:Depends}, ${misc:Depends}, ${shlibs:Depends}
 Description: eC Core Runtime Library
  This package provides the bare minimum
@@ -77,6 +80,7 @@ Description: eC Core Runtime Library
 Package: libec0
 Section: libs
 Architecture: armel armhf i386 powerpc
+Pre-Depends: multiarch-support
 Depends: libecere0 (= ${binary:Version}),
          ${devel:Depends},
          ${misc:Depends},
@@ -91,6 +95,7 @@ Description: eC Compiler Library
 Package: libeda0
 Section: libs
 Architecture: armel armhf i386 powerpc
+Pre-Depends: multiarch-support
 Depends: libecere0, ${devel:Depends}, ${misc:Depends}, ${shlibs:Depends}
 Description: Ecere Data Access
  This package provides the Ecere
@@ -102,6 +107,7 @@ Description: Ecere Data Access
 Package: libedasqlite0
 Section: libs
 Architecture: armel armhf i386 powerpc
+Pre-Depends: multiarch-support
 Depends: libeda0, ${devel:Depends}, ${misc:Depends}, ${shlibs:Depends}
 Description: EDA SQLite Driver
  This package provides SQLite driver
