--- a/debian/rules
+++ b/debian/rules
@@ -11,7 +11,9 @@ prefix=/usr
 endif
 
 ifdef DEB_HOST_MULTIARCH
-export LIBDIR=$(prefix)/$(DEB_HOST_MULTIARCH)
+export LIBDIR=$(prefix)/lib/$(DEB_HOST_MULTIARCH)
+export CPPFLAGS
+CPPFLAGS += -DDEB_HOST_MULTIARCH=\"$(LIBDIR)\"
 else
 ifeq ($(DEB_HOST_ARCH),amd64)
 export LIBDIR=$(prefix)/lib32
